###############################################################
#          Copyright 2019. Guitar&Tea Tech. Co., Ltd.
#                     All Rights Reseved
#
# File     :CMakeLists.txt
# Module   :CMake
# Date     :2019/05/04
# Author   :shiwenqiang
# Brief    :
#
#------------------------Revision History----------------------
#  No. Version Date        Mender        Desc.
#  1   V0.01   2019-05-04  shiwenqiang   Original Version.
###############################################################

CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(GT)

ADD_SUBDIRECTORY(user)

ADD_SUBDIRECTORY(test)
